# drone_planner

./: .gitignore  Dockerfile  README.md  build.sh  docker_build.sh  docker_run.sh  entrypoint.sh  requirements.txt  triangles_qgc_1.kml  triangles_qgc_2.kml  triangles_qgc_3.kml
container_scripts/: run_mavros.sh  run_px4.sh
map_generator/: README.md  kml_parser.py  mission_planner.py  mosa_settings.py
source_code/: CMakeLists.txt  f_compile_and_run.sh  package.xml  process_output.py  run.sh
source_code/architecture/: README.MD  architecture_diagram.drawio
source_code/data/: all_missions.json  hardware.json  map update1.json  map.json
source_code/launch/: harpia_launch.py
source_code/libs/RRT/: rrt.py
source_code/libs/RayCasting/: raycasting.py
source_code/patron_mission_generator_app-harpia/: mission_2.kml  mission_planner.py  setup.py
source_code/pddl/: harpia_domain.pddl  harpia_domain_test.pddl  problema_2_regioes.pddl  run pddl.txt
source_code/scripts/: action_executor_base.py  action_planner.py  action_planner_executor.py  action_planner_memory.py  data_server.py  go_to.py  lifecycle_manager.py  map_updater.py  mission_controller.py  path_planner.py  plume_updater.py  problem_generator.py  recharge_battery.py  route_executor.py  survey.py  survey_path_gen.py  take_image_old.py
source_code/solver/OPTIC/: generate_plan.sh  optic-clp
source_code/solver/TFD/: generate_plan.sh
source_code/solver/TFD/downward/: plan.1
source_code/solver/TFD/downward/preprocess/: preprocess
source_code/solver/TFD/downward/search/: search
source_code/src/harpia_msgs/: CMakeLists.txt  package.xml
source_code/src/harpia_msgs/action/: ActionCaller.action  ExecutePlan.action  MoveTo.action
source_code/src/harpia_msgs/srv/: GeneratePath.srv  GenerateSurveyPath.srv  StrInOut.srv
