<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>route_executor2</name>
  <version>0.0.4</version>

  <description>"Route executor"</description>

  <maintainer email="raphaelbonaccorsi@usp.br">Raphael M. C. Bonaccorsi</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>harpia_msgs</depend>
  <!--
  <depend>nav2_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  -->
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>

  <!--
  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>
  -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
